Added new functionalities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,16 +2,21 @@
 
     <string name="mi_home_package_name">com.xiaomi.smarthome</string>
     <string name="mi_home_version_prefix">v.</string>
-    <string name="mi_home_not_detected">MiHome non installato!</string>
+    <string name="mi_home_not_detected">Nessun MiHome installato!</string>
 
     <string name="app_name">MiReplacer</string>
 
     <!-- HOME -->
-    <string name="no_content_here">Niente da fare qui!</string>
+    <string name="mihome_support_mod_only">La tua versione di MiHome non e\' supportata! \nQuesta applicazione supporta solo MiHome P.</string>
+    <string name="mihome_install_mod">Installa l\'ultima versione di MiHome P!</string>
+    <string name="mihome_telegram_link">Scopri di piu\'\nsul gruppo Telegram</string>
     <string name="mihome_mod_detected">MiHome P rilevato!</string>
     <string name="mihome_stock_detected">MiHome rilevato!</string>
     <string name="miitem_installed_version_label">Installata: </string>
     <string name="miitem_latest_version_label">Disponibile: </string>
+    <string name="miitem_translation_available_label">Traduzione disponibile!</string>
+    <string name="telegram_link">https://t.me/xcape4xiaomi</string>
+    <string name="miitem_no_action_available">Nessuna azione disponibile per questo plugin</string>
 
 
     <!-- SPLASHSCREEN -->
