--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,46 +2,36 @@
 
     <string name="mi_home_package_name">com.xiaomi.smarthome</string>
     <string name="mi_home_version_prefix">v.</string>
-    <string name="mi_home_version">0.4.5</string>
+    <string name="mi_home_version">0.5.0</string>
     <string name="mi_home_not_detected">Nessun MiHome installato!</string>
 
     <string name="app_name">MiReplacer</string>
 
     <!-- HOME -->
-    <string name="mihome_support_mod_only">La tua versione di MiHome non e\' supportata! \nQuesta applicazione supporta solo MiHome P.</string>
-    <string name="mihome_install_mod">Installa l\'ultima versione di MiHome P!</string>
+    <string name="mihome_support_mod_only">La tua versione di MiHome non e\' supportata! \nQuesta applicazione supporta solo MiHome mod.</string>
+    <string name="mihome_install_mod">Installa l\'ultima versione di MiHome mod!</string>
     <string name="mihome_telegram_link">Scopri di piu\'\nsul gruppo Telegram</string>
-    <string name="mihome_mod_detected">MiHome P rilevato!</string>
+    <string name="mihome_mod_detected">MiHome mod rilevato!</string>
     <string name="mihome_stock_detected">MiHome rilevato!</string>
-    <string name="miitem_installed_version_label">Installata: </string>
+    <string name="miitem_installed_version_label">Installato:</string>
     <string name="miitem_latest_version_label">Disponibile: </string>
-    <string name="miitem_translation_available_label">Traduzione disponibile!</string>
-    <string name="miitem_usebest_available_label">Usa migliore disponibile!</string>
-    <string name="miitem_update_available_label">Aggiornamento disponibile!</string>
+    <string name="miitem_translation_available_label">Tocca per tradurre il plugin</string>
+    <string name="miitem_usebest_available_label">Traduzione plugin successivo disponibile!</string>
+    <string name="miitem_update_available_label">Tocca per aggiornare il plugin</string>
     <string name="telegram_link">https://t.me/xcape4xiaomi</string>
     <string name="miitem_no_action_available">Nessuna azione disponibile per questo plugin</string>
     <string name="mihome_change_layout_label">Cambia layout</string>
-
-
+    <string name="miitem_useprev_available_label">Traduzione plugin precedente disponibile!</string>
+    <string name="miitem_plugin_unknown_label">Tocca per inviare all\'analisi questo plugin</string>
     <!-- SPLASHSCREEN -->
     <string name="connecting">Connessione in corso...</string>
     <string name="updating">Aggiornamento...</string>
     <string name="error_network_text">Errore di rete! Si prega di riprovare piu\' tardi.</string>
     <string name="error_permission_text">Questa applicazione non puo\' funzionare senza i permessi che hai negato!</string>
     <string name="error_title">Attenzione</string>
-
-    <!-- REPLACER FRAGMENT -->
     <string name="update_plugin_dialog_message">Aggiornamento in corso...</string>
     <string name="upload_plugin_dialog_message">Upload plugin in corso...</string>
-    <string name="mihome_download_italian_plugin_request">Vuoi scaricare il plugin %1$d italiano?</string>
-    <string name="mihome_delete_plugin_request">Vuoi cancellare il plugin?</string>
-    <string name="mihome_use_best_plugin_request">Il plugin %1$d non e\' stato ancora tradotto!\nVuoi scaricare e forzare l\'utilizzo dell\'ultimo tradotto disponibile (%2$d IT)?</string>
-    <string name="mihome_use_best_plugin_now_available_request">E\' ora disponibile il plugin %1$d in italiano. \nVuoi scaricarlo?</string>
-    <string name="mihome_upload_plugin_dialog_title">xCape wants you!</string>
-    <string name="mihome_upload_plugin_dialog_body">Prima di procedere, aiuta il processo di traduzione inviandoci il plugin %1$dcon cinese!</string>
-    <string name="mihome_upload_plugin_dialog_yes">CI STO!</string>
-    <string name="mihome_upload_plugin_dialog_no">NO</string>
-    <string name="mihome_upload_plugin_dialog_continue_download">Grazie per il tuo aiuto! \nOra puoi procedere alla sostituzione del plugin cinese col migliore disponibile</string>
-    <string name="mihome_upload_plugin_failed">Upload fallito!</string>
+    <string name="installato_text">Installato:</string>
+
 
 </resources>
